--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>host</title>
+  <meta charset="UTF-8">
+  <title>Wydawnictwo OPERON</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome</h1>
+  <div id="wrapper">
+    <nav id="nav1">
+        <ul>
+            <li><a href="#">strona1</a></li>
+            <li><a href="#">strona2</a></li>
+            <li><a href="#">strona3</a></li>
+            <li><a href="#">strona4</a></li>
+            <li><a href="#">strona5</a></li>
+            <li><a href="#">strona6</a></li>
+            <li><a href="#">strona7</a></li>
+            <li><a href="#">strona8</a></li>
+            <li><a href="#">strona9</a></li>
+            <li id="ext"><a href="#">strona10</a>
+                <ol>
+                    <li><a href="#">pdpkt</a></li>
+                    <li><a href="#">pdpkt</a></li>
+                    <li><a href="#">pdpkt</a></li>
+                    <li><a href="#">pdpkt</a></li>
+                </ol>
+            </li>
+        </ul>
+    </nav>
+</div>
+<div id="wrapper2">
+  <nav id="nav2">
+      <img src="logo.png">
+    <ul>
+        <li><a href="#">strona 1</a></li>
+        <li><a href="#">strona 1</a></li>
+        <li><a href="#">strona 1</a></li>
+        <li><a href="#">strona 1</a></li>
+</ul>
+<a href="#" id="mk">Logowanie</a>
+  </nav>
+</div>
+<div id="wrapper3">
+  <nav id="nav3">
+    <ul>
+      <li id="li2"><a href="#">strona 1</a>
+        <ul>
+          <li><a href="#">strona1.1</a></li>
+          <li id="li3"><a href="#">strona1.2</a>
+          <ul>
+            <li><a href="#">strona 1.2.1</a></li>
+            <li><a href="#">strona 1.2.2</a></li>
+          </ul>
+          </li>
+          <li><a href="#">strona1.3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">strona 1</a></li>
+      <li><a href="#">strona 1</a></li>
+      <li><a href="#">strona 1</a></li>
+      <li><a href="#">strona 1</a></li>
+      <li><a href="#">strona 1</a></li>
+    </ul>
+    <a href="#"><span class="glyphicon glyphicon-search"></span></a>
+  </nav>
+</div>
+<div id="slider">
+  <div id="pictures">
+      <img src="picture0.jpg" alt="obraz">
+      <img src="picture1.jpg" alt="obraz">
+      <img src="picture2.jpg" alt="obraz">
+  </div>
+</div>
+<div id="icons">
+  <h1>Szkoła ponadpodstawowa - Mobilna lekcja z Operonem</h1>
+  <ul>
+    <li>
+      <a href="#"><img src="icon1.png" alt="aplikacja"></a>
+      <a href="#">Aplikacja Operon 45</a>
+    </li>
+    <li>
+      <a href="#"><img src="icon2.png" alt="liceu i technikum"></a>
+      <a href="#">Liceum i Technikum</a>
+    </li>
+    <li>
+      <a href="#"><img src="icon3.png" alt="Szkoła branżowa"></a>
+      <a href="#">Szkoła branżowa</a>
+    </li>
+  </ul>
+</div>
+
 </body>
 </html>
